Cambios en plantilla para imprimir licencia.

--- a/css/screen.css
+++ b/css/screen.css
@@ -56,7 +56,7 @@ input[type='text'] {
 }
 
 .pagina-contenido {
-  padding: 3.5cm .5cm 3cm .5cm;
+  padding: 3.5cm 2.2cm 3cm 2.2cm;
   height: 21.44cm
 }
 
