--- a/css/print.css
+++ b/css/print.css
@@ -54,7 +54,7 @@ input[type='text'] {
 }
 
 .pagina-contenido {
-  padding: 3.5cm .5cm 3cm .5cm;
+  padding: 3.5cm 2.2cm 3cm 2.2cm;
   height: 21.44cm
 }
 
